first complete draft of second activity

--- a/TrueFalse.html
+++ b/TrueFalse.html
@@ -147,7 +147,7 @@
   
 
         <h3>Questions:</h3>
-        <p>Assume that sensitivity and specificity are constant. Answer the question below and turn in your work. Also include a plot of +True- and -True+ as functions of \(p\).</p>
+        <p>Assume that sensitivity and specificity are constant. Answer the questions below and turn in your work. Also include a plot of +True- and -True+ as functions of \(p\).</p>
         <ol>
         <li>For what value of \( p \) is +True- maximized?</li>
         <li>For what  value of \( p \) is +True- minimized?</li>
